--- a/style.css
+++ b/style.css
@@ -245,11 +245,102 @@ body{
 }
 
 .about .row .content{
-    
+    flex: 1 1 40rem;
+    padding: 2rem;
+    text-align: center;
+
+}
+
+.about .row .content h1{
+    font-size: 3rem;
+    color: var(--main-color);
+    margin-bottom: 5rem;
+
+}
+
+.about .row .content p{
+    line-height: 1.7;
+    font-size: 1.2rem;
+    margin-bottom: 1.2rem;
 }
 
 
 /* ABOUT SECTION ENDS HERE */
+/* SERVICES SECTION STARTS HERE */
+.services{
+    min-height: 100vh;
+    text-align: center;
+    padding: 2% 6%;
+}
+
+.services h1 {
+    font-size: 3.8rem;
+    padding: 0.5rem;
+    display: inline-block;
+    color: var(--main-color);
+    border-bottom: .3rem solid var(--main-color);
+    margin-bottom: 1.8rem;
+}
+
+.services .container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-wrap: wrap;
+
+}
+
+.services .container .box{
+    width: 31rem;
+    height: 31rem;
+    margin: .5rem;
+    position: relative;
+    overflow: hidden;
+}
+
+.services .container .box img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+
+.services .container .box .info{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transform-origin: bottom ;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.services .container .box:hover .info{
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.services .container .box .info h3{
+    font-size: 3rem;
+    color: var(--main-color);
+    margin-bottom: 1.2rem;
+}
+
+.services .container .box .info p{
+    line-height: 2;
+    color: #fff;
+    font-size: 1.1rem;
+    padding: 0 1rem;
+    margin-bottom: 1.2rem;
+
+}
+
+/* SERVICES SECTION ENDS HERE */
 
 
 
