--- a/style.css
+++ b/style.css
@@ -341,6 +341,245 @@ body{
 }
 
 /* SERVICES SECTION ENDS HERE */
+/* TRAINER SECTION STARTS HERE */
+
+.trainers{
+    min-height: 100vh;
+    text-align: center;
+    padding: 2% 6%;
+}
+   
+.trainers h1{
+    font-size: 3.8rem;
+    padding: 0.5rem;
+    display: inline-block;
+    color: var(--main-color);
+    border-bottom: .3rem solid var(--main-color);
+    margin-bottom: 1.8rem;
+}
+
+.trainers p{
+    font-size: 1.5rem;
+    color: #333;
+}
+
+.trainers .items{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.trainers .items .item {
+    height: 40rem;
+    width: 24rem;
+    margin: 5rem 1rem;
+}
+
+.trainers  .item img{
+    width: 100%;
+    height: 100%;
+    border-radius: .6rem;
+    object-fit: cover;
+} 
+
+.trainers  .item .inner{
+    position: relative;
+    z-index: 9999;
+    padding: 0 1rem;
+
+}
+
+.trainers  .item:hover{
+    transform: translateY(-20px);
+}
+.trainers  .item .inner .info{
+    background-color: var(--main-color);
+    padding: 1.2rem 1rem;
+    border-radius: 0.6rem;
+    margin-top: -2.5rem;
+}
+
+.trainers  .item:hover .info{
+    transform: translateY(-30px);
+}
+
+.trainers  .item .inner .info h4{
+    font-size: 1.3rem;
+    font-weight: 600;
+    margin: 0;
+    color: #000;
+}
+
+.trainers  .item .inner .info p{
+    font-size: 1.1rem;
+    font-weight: 400;
+    color: #333;
+    margin-top: .6rem;
+}
+
+.trainers  .item .inner .info .links{
+    margin-top: 1rem;
+
+}
+
+.trainers  .item .inner .info .links a{
+    display: inline-block;
+    height: 2rem;
+    width: 2rem;
+    background-color: #fff;
+    border-radius: 50%;
+    color: var(--main-color);
+    text-align: center;
+    line-height: 2rem;
+    margin-left: 0.3rem;
+    font-size: 1.1rem;
+}
+
+.trainers  .item .inner .info .links a:hover{
+    box-shadow: 0 0 .6rem #000;
+}
+
+
+/* TRAINER SECTION ENDS HERE */
+/* PRICING SECTION ENDS HERE */
+
+
+.pricing {
+    grid: 32rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem; 
+}
+
+.information span{
+    font-size: 2rem;
+    color: var(--main-color);
+}
+.information  h3{
+    font-size: 4rem;
+    padding-top: .5rem;
+    color: #333;
+}
+
+.information p{
+    line-height: 2;
+    padding: 1rem 0;
+    font-size: 1.4rem;
+    color: #333;
+
+}
+.information i {
+    padding-right: 1rem;
+    color: var(--main-color);
+}
+
+.plan{
+    text-align: center;
+    padding: 2rem;  
+    
+}
+/* .plan .basic{
+    background: (130deg, red 93%, transparent 20%);
+} */
+
+.plan h3{
+    font-size: 2.5rem;
+    margin: 1rem 0;
+    color: #333;
+}
+
+.plan .price{
+    font-size: 5rem;
+    font-weight: bolder;
+    color: var(--main-color);
+
+}
+
+.plan span{
+    color: var(--main-color);
+    font-size: 2rem;
+}
+
+.plan p{
+    line-height: 2;
+    padding: 1rem 0;
+    font-size: 1.4rem;
+    color: #333;
+
+}
+.plan i {
+    padding-right: 1rem;
+    color: var(--main-color);
+}
+
+.list{
+    padding: 1rem 0;
+}
+.list  p{
+    line-height: 2;
+    padding: 1rem 0;
+    font-size: 1.4rem;
+    color: #333;
+
+}
+.list i{
+    padding-right: 1rem;
+    color: var(--main-color);
+
+}
+
+
+/* PRICING SECTION ENDS HERE */
+/* FOOTER SECTION STARTS HERE */
+.footer {
+    background: url(/images/Rectangle\ 1.png) no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    position: relative;
+
+}
+
+.box-container{
+    display: flex;
+}
+
+.box-container .box{
+    width: 22%;
+    display: block;
+    padding: 10px 35px;
+}
+
+.box-container .box h3{
+    font-size: 2rem;
+    padding: 1rem ;
+
+}
+
+
+.box-container .box a{
+  
+    padding: .5rem 0;
+    display: block;
+}
+.box-container .box i{
+    padding-right: .5rem;
+    color: red;
+}
+
+.credit {
+    text-align: center;
+}
+
+/* .box-container:hover{
+    color: #13D68F;
+} */
+
+
+
+
+/* FOOTER SECTION ENDS HERE */
 
 
 
