--- a/style.css
+++ b/style.css
@@ -551,9 +551,12 @@ body{
     padding: 10px 35px;
 }
 
-.box-container .box h3{
+.box h3{
     font-size: 2rem;
-    padding: 1rem ;
+    margin-bottom: 1rem;
+    /* padding: 1rem ; */
+    display: flex;
+    flex-direction: column;
 
 }
 
@@ -566,6 +569,42 @@ body{
 .box-container .box i{
     padding-right: .5rem;
     color: red;
+}
+
+.footer .email{
+    width: 250px;
+    height: 40px;
+    border-radius: 4px;
+    outline: none;
+    border: none;
+    padding-left: 0.5rem;
+    font-size: 1rem;
+    margin-bottom: 1rem;
+}
+
+.footer .email::placeholder{
+    color: #b1b1b1;
+}
+
+.link-btn{
+    width: 100px;
+    height: 40px;
+    border-radius: 4px;
+    background-color: rgb(9, 9, 9);
+    outline: none;
+    border: none;
+    color: #fff;
+    font-size: 1rem;
+    
+}
+
+.link-btn:hover{
+    cursor: pointer;
+    background-color: var(--main-color);
+    transition:all 0.4s ease-out ;
+    
+    
+
 }
 
 .credit {
